version/0.73/_sources/autoapi/pyedb/grpc/database/modeler/Modeler.rst.txt






:class:`Modeler`
================


.. py:class:: pyedb.grpc.database.modeler.Modeler(p_edb)

   Bases: :py:obj:`object`


   
   Manages EDB methods for primitives management accessible from `Edb.modeler`.















   .. rubric:: Examples

   >>> from pyedb import Edb
   >>> edbapp = Edb("myaedbfolder", edbversion="2021.2")
   >>> edb_layout = edbapp.modeler

   ..
       !! processed by numpydoc !!




.. py:currentmodule:: Modeler

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~clear_cache`
            - Force reload of all primitives and reset indexes.
          * - :py:attr:`~get_primitive`
            - Retrieve primitive from give id.
          * - :py:attr:`~get_polygons_by_layer`
            - Retrieve polygons by layer.
          * - :py:attr:`~get_primitive_by_layer_and_point`
            - Get primitive at specified point on layer.
          * - :py:attr:`~get_polygon_bounding_box`
            - Get bounding box of polygon.
          * - :py:attr:`~get_polygon_points`
            - Get points defining a polygon.
          * - :py:attr:`~parametrize_polygon`
            - Parametrize polygon points based on another polygon.
          * - :py:attr:`~create_trace`
            - Create trace path.
          * - :py:attr:`~create_polygon`
            - Create polygon primitive.
          * - :py:attr:`~create_rectangle`
            - Create rectangle primitive.
          * - :py:attr:`~create_circle`
            - Create circle primitive.
          * - :py:attr:`~create_text`
            - Create text primitive.
          * - :py:attr:`~delete_primitives`
            - Delete primitives by net name(s).
          * - :py:attr:`~get_primitives`
            - Get primitives with filtering.
          * - :py:attr:`~fix_circle_void_for_clipping`
            - Fix circle void clipping issues.
          * - :py:attr:`~parametrize_trace_width`
            - Parametrize trace width.
          * - :py:attr:`~unite_polygons_on_layer`
            - Unite polygons on layer.
          * - :py:attr:`~defeature_polygon`
            - Defeature polygon.
          * - :py:attr:`~get_layout_statistics`
            - Get layout statistics.
          * - :py:attr:`~create_bondwire`
            - Create bondwire.
          * - :py:attr:`~create_pin_group`
            - Create pin group.
          * - :py:attr:`~insert_layout_instance_on_layer`
            - Insert a layout instance into the active layout.
          * - :py:attr:`~insert_layout_instance_placement_3d`
            - Insert a 3D component placement into the active layout.
          * - :py:attr:`~insert_3d_component_placement_3d`
            - Insert a 3D component placement into the active layout.
          * - :py:attr:`~insert_3d_component_on_layer`
            - Insert a layout instance into the active layout.
          * - :py:attr:`~create_taper`
            - Create RF trace taper.
          * - :py:attr:`~open_solder_mask`
            - Create solder mask openings for components, voids, and traces.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~primitives`
            - Primitives.
          * - :py:attr:`~primitives_by_layer`
            - Primitives organized by layer names.
          * - :py:attr:`~polygons_by_layer`
            - Primitives with layer names as keys.
          * - :py:attr:`~rectangles`
            - All rectangle primitives.
          * - :py:attr:`~circles`
            - All circle primitives.
          * - :py:attr:`~paths`
            - All path primitives.
          * - :py:attr:`~texts`
            - All text primitives.
          * - :py:attr:`~polygons`
            - All polygon primitives.
          * - :py:attr:`~primitives_by_net`
            - Primitives with net names as keys.



   .. tab-item:: Static methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~add_void`
            - Add void to shape.


   .. tab-item:: Special methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~__getitem__`
            - Get a primitive by name or ID.




Import detail
-------------

.. code-block:: python

    from pyedb.grpc.database.modeler import Modeler

Property detail
---------------

.. py:property:: primitives

   
   Primitives.

   .. deprecated:: 0.70.0
      Use :attr:`edb.layout.primitives` instead.




   :Returns:

       :class:`python:list` :obj:`of` :class:`pyedb.grpc.database.primitives.Primitive`
           List of primitives.











   ..
       !! processed by numpydoc !!

.. py:property:: primitives_by_layer

   
   Primitives organized by layer names.

   .. deprecated:: 0.70.0
   use layout.primitives_by_layer property instead.















   ..
       !! processed by numpydoc !!

.. py:property:: polygons_by_layer
   :type: dict[str, List[pyedb.grpc.database.primitive.polygon.Polygon]]


   
   Primitives with layer names as keys.

   .. deprecated:: 0.70.0
   use layout.polygons_by_layer property instead.




   :Returns:

       :class:`python:dict`
           Dictionary of polygons with layer names as keys.











   ..
       !! processed by numpydoc !!

.. py:property:: rectangles
   :type: List[Union[pyedb.grpc.database.primitive.rectangle.Rectangle, pyedb.grpc.database.primitive.primitive.Primitive]]


   
   All rectangle primitives.





   :Returns:

       :class:`python:list`
           List of :class:`pyedb.grpc.database.edb_data.primitives_data.Rectangle` objects.











   ..
       !! processed by numpydoc !!

.. py:property:: circles
   :type: List[Union[pyedb.grpc.database.primitive.circle.Circle, pyedb.grpc.database.primitive.primitive.Primitive]]


   
   All circle primitives.

   .. deprecated:: 0.70.0
   use layout.circles instead.




   :Returns:

       :class:`python:list`
           List of :class:`pyedb.grpc.database.edb_data.primitives_data.Circle` objects.











   ..
       !! processed by numpydoc !!

.. py:property:: paths
   :type: List[Union[pyedb.grpc.database.primitive.path.Path, pyedb.grpc.database.primitive.primitive.Primitive]]


   
   All path primitives.

   .. deprecated:: 0.70.0
   use layout.paths instead.




   :Returns:

       :class:`python:list`
           List of :class:`pyedb.grpc.database.edb_data.primitives_data.Path` objects.











   ..
       !! processed by numpydoc !!

.. py:property:: texts
   :type: List[Union[pyedb.grpc.database.primitive.text.Text, pyedb.grpc.database.primitive.primitive.Primitive]]


   
   All text primitives.





   :Returns:

       :class:`python:list`
           List of :class:`pyedb.grpc.database.edb_data.primitives_data.Text` objects.











   ..
       !! processed by numpydoc !!

.. py:property:: polygons
   :type: List[Union[pyedb.grpc.database.primitive.polygon.Polygon, pyedb.grpc.database.primitive.primitive.Primitive]]


   
   All polygon primitives.

   .. deprecated:: 0.70.0
   use layout.polygons instead.




   :Returns:

       :class:`python:list`
           List of :class:`pyedb.grpc.database.primitive.polygon.Polygon` objects.











   ..
       !! processed by numpydoc !!

.. py:property:: primitives_by_net
   :type: dict[str, List[pyedb.grpc.database.primitive.primitive.Primitive]]


   
   Primitives with net names as keys.

   .. deprecated:: 0.70.0
   use layout.primitives_by_net instead.




   :Returns:

       :class:`python:dict`
           Dictionary of primitives with net names as keys.











   ..
       !! processed by numpydoc !!




Method detail
-------------

.. py:method:: __getitem__(name: Union[str, int]) -> pyedb.grpc.database.primitive.primitive.Primitive

   
   Get a primitive by name or ID.


   :Parameters:

       **name** : :class:`python:str` or :class:`python:int`
           Name or ID of the primitive.



   :Returns:

       :class:`pyedb.grpc.database.primitive.primitive.Primitive`
           Primitive instance if found, None otherwise.




   :Raises:

       :obj:`TypeError`
           If name is not str or int.







   ..
       !! processed by numpydoc !!

.. py:method:: clear_cache()

   
   Force reload of all primitives and reset indexes.
















   ..
       !! processed by numpydoc !!

.. py:method:: get_primitive(primitive_id: int) -> list[pyedb.grpc.database.primitive.primitive.Primitive]

   
   Retrieve primitive from give id.

   .. deprecated:: 0.70.0
   use layout.find_object_by_id method instead.

   :Parameters:

       **primitive_id** : :class:`python:int`
           Primitive id.



   :Returns:

       :class:`python:list` :obj:`of` :class:`pyedb.grpc.database.primitive.primitive.Primitive`
           List of primitives.











   ..
       !! processed by numpydoc !!

.. py:method:: get_polygons_by_layer(layer_name: str, net_list: Optional[List[str]] = None) -> List[pyedb.grpc.database.primitive.primitive.Primitive]

   
   Retrieve polygons by layer.

   .. deprecated:: 0.70.0
   use layout.get_polygons_by_layer method instead.

   :Parameters:

       **layer_name** : :class:`python:str`
           Layer name.

       **net_list** : :class:`python:list`, :obj:`optional`
           List of net names to filter by.



   :Returns:

       :class:`python:list`
           List of polygon objects.











   ..
       !! processed by numpydoc !!

.. py:method:: get_primitive_by_layer_and_point(point: Optional[List[float]] = None, layer: Optional[Union[str, List[str]]] = None, nets: Optional[Union[str, List[str]]] = None) -> List[pyedb.grpc.database.primitive.primitive.Primitive]

   
   Get primitive at specified point on layer.


   :Parameters:

       **point** : :class:`python:list`, :obj:`optional`
           [x, y] coordinate point.

       **layer** : :class:`python:str` or :class:`python:list`, :obj:`optional`
           Layer name(s) to filter by.

       **nets** : :class:`python:str` or :class:`python:list`, :obj:`optional`
           Net name(s) to filter by.



   :Returns:

       :class:`python:list`
           List of primitive objects at the point.




   :Raises:

       :obj:`ValueError`
           If point is invalid.







   ..
       !! processed by numpydoc !!

.. py:method:: get_polygon_bounding_box(polygon: pyedb.grpc.database.primitive.primitive.Primitive) -> List[float]

   
   Get bounding box of polygon.

   .. deprecated:: 0.70.0
   use layout.get_polygon_bounding_box method instead.

   :Parameters:

       **polygon** : :class:`pyedb.grpc.database.edb_data.primitives_data.Primitive`
           Polygon primitive.



   :Returns:

       :class:`python:list`
           Bounding box coordinates [min_x, min_y, max_x, max_y].











   ..
       !! processed by numpydoc !!

.. py:method:: get_polygon_points(polygon) -> List[List[float]]

   
   Get points defining a polygon.

   .. deprecated:: 0.70.0
   use layout.get_polygon_points method instead.

   :Parameters:

       **polygon** : :class:`pyedb.grpc.database.edb_data.primitives_data.Primitive`
           Polygon primitive.



   :Returns:

       :class:`python:list`
           List of point coordinates.











   ..
       !! processed by numpydoc !!

.. py:method:: parametrize_polygon(polygon, selection_polygon, offset_name='offsetx', origin=None) -> bool

   
   Parametrize polygon points based on another polygon.


   :Parameters:

       **polygon** : :class:`pyedb.grpc.database.edb_data.primitives_data.Primitive`
           Polygon to parametrize.

       **selection_polygon** : :class:`pyedb.grpc.database.edb_data.primitives_data.Primitive`
           Polygon used for selection.

       **offset_name** : :class:`python:str`, :obj:`optional`
           Name of offset parameter.

       **origin** : :class:`python:list`, :obj:`optional`
           [x, y] origin point for vector calculation.



   :Returns:

       :ref:`bool <python:bltin-boolean-values>`
           True if successful, False otherwise.











   ..
       !! processed by numpydoc !!

.. py:method:: create_trace(path_list: Union[Iterable[float], ansys.edb.core.geometry.polygon_data.PolygonData], layer_name: str, width: float = 1, net_name: str = '', start_cap_style: str = 'Round', end_cap_style: str = 'Round', corner_style: str = 'Round') -> Optional[pyedb.grpc.database.primitive.primitive.Primitive]

   
   Create trace path.


   :Parameters:

       **path_list** : :obj:`Iterable`
           List of points [x,y] or [[x, y], ...]
           or [(x, y)...].

       **layer_name** : :class:`python:str`
           Layer name.

       **width** : :class:`python:float`, :obj:`optional`
           Trace width.

       **net_name** : :class:`python:str`, :obj:`optional`
           Associated net name.

       **start_cap_style** : :class:`python:str`, :obj:`optional`
           Start cap style ("Round", "Extended", "Flat").

       **end_cap_style** : :class:`python:str`, :obj:`optional`
           End cap style ("Round", "Extended", "Flat").

       **corner_style** : :class:`python:str`, :obj:`optional`
           Corner style ("Round", "Sharp", "Mitered").



   :Returns:

       :class:`pyedb.grpc.database.edb_data.primitives_data.Path` or :ref:`bool <python:bltin-boolean-values>`
           Path object if created, False otherwise.











   ..
       !! processed by numpydoc !!

.. py:method:: create_polygon(points: Union[List[List[float]], ansys.edb.core.geometry.polygon_data.PolygonData], layer_name: str, voids: Optional[List[Any]] = [], net_name: str = '') -> Union[Optional[pyedb.grpc.database.primitive.primitive.Primitive], bool]

   
   Create polygon primitive.


   :Parameters:

       **points** : :class:`python:list` or :class:`ansys.edb.core.geometry.polygon_data.PolygonData`
           Polygon points or PolygonData object.

       **layer_name** : :class:`python:str`
           Layer name.

       **voids** : :class:`python:list`, :obj:`optional`
           List of void shapes or points.

       **net_name** : :class:`python:str`, :obj:`optional`
           Associated net name.



   :Returns:

       :class:`pyedb.grpc.database.edb_data.primitives_data.Polygon` or :ref:`bool <python:bltin-boolean-values>`
           Polygon object if created, False otherwise.











   ..
       !! processed by numpydoc !!

.. py:method:: create_rectangle(layer_name: str, net_name: str = '', lower_left_point: str = '', upper_right_point: str = '', center_point: str = '', width: Union[str, float] = '', height: Union[str, float] = '', representation_type: str = 'lower_left_upper_right', corner_radius: str = '0mm', rotation: str = '0deg') -> Optional[pyedb.grpc.database.primitive.primitive.Primitive]

   
   Create rectangle primitive.


   :Parameters:

       **layer_name** : :class:`python:str`
           Layer name.

       **net_name** : :class:`python:str`, :obj:`optional`
           Associated net name.

       **lower_left_point** : :class:`python:list`
           Required for representation type: "lower_left_upper_right"
           [x,y] lower left point.

       **upper_right_point** : :class:`python:list`
           Required for representation type: "lower_left_upper_right"
           [x,y] upper right point.

       **center_point** : :class:`python:list`
           Required for representation type: "center_width_height"
           [x,y] center point.

       **width** : :class:`python:str` or :class:`python:float`, :obj:`optional`
           Required for representation type: "center_width_height"
           Rectangle width.

       **height** : :class:`python:str` or :class:`python:float`, :obj:`optional`
            Required for representation type: "center_width_height"
           Rectangle height.

       **representation_type** : :class:`python:str`, :obj:`optional`
           "lower_left_upper_right" or "center_width_height". Default value is "lower_left_upper_right".

       **corner_radius** : :class:`python:str`, :obj:`optional`
           Corner radius with units.

       **rotation** : :class:`python:str`, :obj:`optional`
           Rotation angle with units.



   :Returns:

       :class:`pyedb.grpc.database.edb_data.primitives_data.Rectangle` or :ref:`bool <python:bltin-boolean-values>`
           Rectangle object if created, False otherwise.











   ..
       !! processed by numpydoc !!

.. py:method:: create_circle(layer_name: str, x: Union[float, str], y: Union[float, str], radius: Union[float, str], net_name: str = '') -> Optional[pyedb.grpc.database.primitive.primitive.Primitive]

   
   Create circle primitive.


   :Parameters:

       **layer_name** : :class:`python:str`
           Layer name.

       **x** : :class:`python:float`
           Center x-coordinate.

       **y** : :class:`python:float`
           Center y-coordinate.

       **radius** : :class:`python:float`
           Circle radius.

       **net_name** : :class:`python:str`, :obj:`optional`
           Associated net name.



   :Returns:

       :class:`pyedb.grpc.database.edb_data.primitives_data.Circle` or :ref:`bool <python:bltin-boolean-values>`
           Circle object if created, False otherwise.











   ..
       !! processed by numpydoc !!

.. py:method:: create_text(layer_name: str, x: Union[float, str], y: Union[float, str], text: str) -> Optional[pyedb.grpc.database.primitive.primitive.Primitive]

   
   Create text primitive.


   :Parameters:

       **layer_name** : :class:`python:str`
           Layer name.

       **x** : :class:`python:float`
           Center x-coordinate.

       **y** : :class:`python:float`
           Center y-coordinate.

       **text** : :class:`python:str`
           Text of the displayed object.



   :Returns:

       :class:`pyedb.grpc.database.edb_data.primitives_data.Text` or :ref:`bool <python:bltin-boolean-values>`
           Text object if created, False otherwise.











   ..
       !! processed by numpydoc !!

.. py:method:: delete_primitives(net_names: Union[str, List[str]]) -> bool

   
   Delete primitives by net name(s).


   :Parameters:

       **net_names** : :class:`python:str` or :class:`python:list`
           Net name(s).



   :Returns:

       :ref:`bool <python:bltin-boolean-values>`
           True if successful, False otherwise.











   ..
       !! processed by numpydoc !!

.. py:method:: get_primitives(net_name: Optional[str] = None, layer_name: Optional[str] = None, prim_type: Optional[str] = None, is_void: Optional[bool] = None) -> List[pyedb.grpc.database.primitive.primitive.Primitive]

   
   Get primitives with filtering.


   :Parameters:

       **net_name** : :class:`python:str`, :obj:`optional`
           Net name filter.

       **layer_name** : :class:`python:str`, :obj:`optional`
           Layer name filter.

       **prim_type** : :class:`python:str`, :obj:`optional`
           Primitive type filter.

       **is_void** : :ref:`bool <python:bltin-boolean-values>`, :obj:`optional`
           Void primitive filter. When ``None``, both standard primitives and voids are returned.



   :Returns:

       :class:`python:list`
           List of filtered primitives.











   ..
       !! processed by numpydoc !!

.. py:method:: fix_circle_void_for_clipping() -> bool

   
   Fix circle void clipping issues.





   :Returns:

       :ref:`bool <python:bltin-boolean-values>`
           True if changes made, False otherwise.











   ..
       !! processed by numpydoc !!

.. py:method:: parametrize_trace_width(nets_name: Union[str, List[str]], layers_name: Optional[Union[str, List[str]]] = None, parameter_name: str = 'trace_width', variable_value: Optional[Union[float, str]] = None) -> bool

   
   Parametrize trace width.


   :Parameters:

       **nets_name** : :class:`python:str` or :class:`python:list`
           Net name(s).

       **layers_name** : :class:`python:str` or :class:`python:list`, :obj:`optional`
           Layer name(s) filter.

       **parameter_name** : :class:`python:str`, :obj:`optional`
           Parameter name prefix.

       **variable_value** : :class:`python:float` or :class:`python:str`, :obj:`optional`
           Initial parameter value.



   :Returns:

       :ref:`bool <python:bltin-boolean-values>`
           True if successful, False otherwise.











   ..
       !! processed by numpydoc !!

.. py:method:: unite_polygons_on_layer(layer_name: Optional[Union[str, List[str]]] = None, delete_padstack_gemometries: bool = False, net_names_list: Optional[List[str]] = None) -> bool

   
   Unite polygons on layer.


   :Parameters:

       **layer_name** : :class:`python:str` or :class:`python:list`, :obj:`optional`
           Layer name(s) to process.

       **delete_padstack_gemometries** : :ref:`bool <python:bltin-boolean-values>`, :obj:`optional`
           Whether to delete padstack geometries.

       **net_names_list** : :class:`python:list`, :obj:`optional`
           Net names filter.



   :Returns:

       :ref:`bool <python:bltin-boolean-values>`
           True if successful, False otherwise.











   ..
       !! processed by numpydoc !!

.. py:method:: defeature_polygon(poly: pyedb.grpc.database.primitive.polygon.Polygon, tolerance: float = 0.001) -> bool

   
   Defeature polygon.


   :Parameters:

       **poly** : :class:`pyedb.grpc.database.edb_data.primitives_data.Polygon`
           Polygon to defeature.

       **tolerance** : :class:`python:float`, :obj:`optional`
           Maximum surface deviation tolerance.



   :Returns:

       :ref:`bool <python:bltin-boolean-values>`
           True if successful, False otherwise.











   ..
       !! processed by numpydoc !!

.. py:method:: get_layout_statistics(evaluate_area: bool = False, net_list: Optional[List[str]] = None) -> pyedb.grpc.database.utility.layout_statistics.LayoutStatistics

   
   Get layout statistics.


   :Parameters:

       **evaluate_area** : :ref:`bool <python:bltin-boolean-values>`, :obj:`optional`
           Whether to compute metal area statistics.

       **net_list** : :class:`python:list`, :obj:`optional`
           Net list for area computation.



   :Returns:

       :class:`LayoutStatistics`
           Layout statistics object.











   ..
       !! processed by numpydoc !!

.. py:method:: create_bondwire(definition_name: str, placement_layer: str, width: Union[float, str], material: str, start_layer_name: str, start_x: Union[float, str], start_y: Union[float, str], end_layer_name: str, end_x: Union[float, str], end_y: Union[float, str], net: str, start_cell_instance_name: Optional[str] = None, end_cell_instance_name: Optional[str] = None, bondwire_type: str = 'jedec4') -> pyedb.grpc.database.primitive.bondwire.Bondwire

   
   Create bondwire.


   :Parameters:

       **definition_name** : :class:`python:str`
           Bondwire definition name.

       **placement_layer** : :class:`python:str`
           Placement layer name.

       **width** : :class:`python:float` or :class:`python:str`
           Bondwire width.

       **material** : :class:`python:str`
           Material name.

       **start_layer_name** : :class:`python:str`
           Start layer name.

       **start_x** : :class:`python:float` or :class:`python:str`
           Start x-coordinate.

       **start_y** : :class:`python:float` or :class:`python:str`
           Start y-coordinate.

       **end_layer_name** : :class:`python:str`
           End layer name.

       **end_x** : :class:`python:float` or :class:`python:str`
           End x-coordinate.

       **end_y** : :class:`python:float` or :class:`python:str`
           End y-coordinate.

       **net** : :class:`python:str`
           Associated net name.

       **start_cell_instance_name** : :class:`python:str`, :obj:`optional`
           Start cell instance name.

       **end_cell_instance_name** : :class:`python:str`, :obj:`optional`
           End cell instance name.

       **bondwire_type** : :class:`python:str`, :obj:`optional`
           Bondwire type ("jedec4", "jedec5", "apd").



   :Returns:

       :class:`pyedb.grpc.database.edb_data.primitives_data.Bondwire` or :ref:`bool <python:bltin-boolean-values>`
           Bondwire object if created, False otherwise.











   ..
       !! processed by numpydoc !!

.. py:method:: create_pin_group(name: str, pins_by_id: Optional[List[int]] = None, pins_by_aedt_name: Optional[List[str]] = None, pins_by_name: Optional[List[str]] = None) -> bool

   
   Create pin group.


   :Parameters:

       **name** : :class:`python:str`
           Pin group name.

       **pins_by_id** : :class:`python:list`, :obj:`optional`
           List of pin IDs.

       **pins_by_aedt_name** : :class:`python:list`, :obj:`optional`
           List of pin AEDT names.

       **pins_by_name** : :class:`python:list`, :obj:`optional`
           List of pin names.



   :Returns:

       :class:`pyedb.grpc.database.siwave.pin_group.PinGroup` or :ref:`bool <python:bltin-boolean-values>`
           PinGroup object if created, False otherwise.











   ..
       !! processed by numpydoc !!

.. py:method:: add_void(shape: pyedb.grpc.database.primitive.primitive.Primitive, void_shape: Union[pyedb.grpc.database.primitive.primitive.Primitive, List[pyedb.grpc.database.primitive.primitive.Primitive]]) -> bool
   :staticmethod:


   
   Add void to shape.


   :Parameters:

       **shape** : :class:`pyedb.grpc.database.edb_data.primitives_data.Primitive`
           Main shape.

       **void_shape** : :class:`python:list` or :class:`pyedb.grpc.database.edb_data.primitives_data.Primitive`
           Void shape(s).



   :Returns:

       :ref:`bool <python:bltin-boolean-values>`
           True if successful, False otherwise.











   ..
       !! processed by numpydoc !!

.. py:method:: insert_layout_instance_on_layer(cell_name: str, placement_layer: str, rotation: Union[float, str] = 0.0, rotation_x: float | str = 0, rotation_y: float | str = 0, x: float | str = 0, y: float | str = 0, place_on_bottom: bool = False, local_origin_x: float | str | None = 0, local_origin_y: float | str | None = 0) -> Any

   
   Insert a layout instance into the active layout.


   :Parameters:

       **cell_name: str**
           Name of the layout to insert.

       **placement_layer: str**
           Placement Layer.

       **rotation** : :class:`python:float` or :class:`python:str`
           Rotation angle around Z-axis, specified counter-clockwise in radians.

       **rotation_x** : :class:`python:float` or :class:`python:str`
           Rotation angle around X-axis, specified counter-clockwise in radians.

       **rotation_y** : :class:`python:float` or :class:`python:str`
           Rotation angle around Y-axis, specified counter-clockwise in radians.

       **x** : :class:`python:float` or :class:`python:str`
           X offset.

       **y** : :class:`python:float` or :class:`python:str`
           Y offset.

       **place_on_bottom** : :ref:`bool <python:bltin-boolean-values>`
           Whether to place the layout instance on the bottom of the layer.

       **local_origin_x: float or str**
           Local origin X coordinate.

       **local_origin_y: float or str**
           Local origin Y coordinate.














   ..
       !! processed by numpydoc !!

.. py:method:: insert_layout_instance_placement_3d(cell_name: Union[str, pyedb.grpc.database.primitive.path.Path], x: Union[float, str] = 0.0, y: Union[float, str] = 0.0, z: Union[float, str] = 0.0, rotation_x: Union[float, str] = 0.0, rotation_y: Union[float, str] = 0.0, rotation_z: Union[float, str] = 0.0, local_origin_x: Union[float, str] = 0.0, local_origin_y: Union[float, str] = 0.0, local_origin_z: Union[float, str] = 0.0) -> Any

   
   Insert a 3D component placement into the active layout.


   :Parameters:

       **cell_name: str**
           Name of the layout to insert.

       **x: float or str**
           X coordinate.

       **y: float or str**
           Y coordinate.

       **z: float or str**
           Z coordinate.

       **rotation_x: float or str**
           Rotation angle around X-axis, specified counter-clockwise in radians.

       **rotation_y: float or str**
           Rotation angle around Y-axis, specified counter-clockwise in radians.

       **rotation_z: float or str**
           Rotation angle around Z-axis, specified counter-clockwise in radians.

       **local_origin_x: float or str**
           Local origin X coordinate.

       **local_origin_y: float or str**
           Local origin Y coordinate.

       **local_origin_z: float or str**
           Local origin Z coordinate.














   ..
       !! processed by numpydoc !!

.. py:method:: insert_3d_component_placement_3d(a3dcomp_path: Union[str, pyedb.grpc.database.primitive.path.Path], x: Union[float, str] = 0.0, y: Union[float, str] = 0.0, z: Union[float, str] = 0.0, rotation_x: Union[float, str] = 0.0, rotation_y: Union[float, str] = 0.0, rotation_z: Union[float, str] = 0.0, local_origin_x: Union[float, str] = 0.0, local_origin_y: Union[float, str] = 0.0, local_origin_z: Union[float, str] = 0.0) -> Any

   
   Insert a 3D component placement into the active layout.


   :Parameters:

       **a3dcomp_path: str or Path**
           File path to the 3D component.

       **x: float or str**
           X coordinate.

       **y: float or str**
           Y coordinate.

       **z: float or str**
           Z coordinate.

       **rotation_x: float or str**
           Rotation angle around X-axis, specified counter-clockwise in radians.

       **rotation_y: float or str**
           Rotation angle around Y-axis, specified counter-clockwise in radians.

       **rotation_z: float or str**
           Rotation angle around Z-axis, specified counter-clockwise in radians.

       **local_origin_x: float or str**
           Local origin X coordinate.

       **local_origin_y: float or str**
           Local origin Y coordinate.

       **local_origin_z: float or str**
           Local origin Z coordinate.














   ..
       !! processed by numpydoc !!

.. py:method:: insert_3d_component_on_layer(a3dcomp_path: str | pyedb.grpc.database.primitive.path.Path, placement_layer: str, rotation: float | str = 0, rotation_x: float | str = 0, rotation_y: float | str = 0, x: float | str = 0, y: float | str = 0, place_on_bottom: bool = False, local_origin_x: float | str | None = 0, local_origin_y: float | str | None = 0, local_origin_z: float | str | None = 0) -> Any

   
   Insert a layout instance into the active layout.


   :Parameters:

       **a3dcomp_path: str or Path**
           File path to the 3D component.

       **placement_layer: str**
           Placement Layer.

       **rotation** : :class:`python:float` or :class:`python:str`
           Rotation angle, specified counter-clockwise in radians.

       **rotation_x** : :class:`python:float` or :class:`python:str`
           Rotation angle, specified counter-clockwise in radians.

       **rotation_y** : :class:`python:float` or :class:`python:str`
           Rotation angle, specified counter-clockwise in radians.

       **x** : :class:`python:float` or :class:`python:str`
           X offset.

       **y** : :class:`python:float` or :class:`python:str`
           Y offset.

       **place_on_bottom** : :ref:`bool <python:bltin-boolean-values>`
           Whether to place the layout instance on the bottom of the layer.

       **local_origin_x: float or str**
           Local origin X coordinate.

       **local_origin_y: float or str**
           Local origin Y coordinate.

       **local_origin_z: float or str**
           Local origin Z coordinate.














   ..
       !! processed by numpydoc !!

.. py:method:: create_taper(start_point: tuple[str | float, str | float, str | float, str | float], end_point: tuple[str | float, str | float, str | float, str | float], start_width: str | float, end_width: str | float, layer_name: str = '', voids: list | None = None, net_name: str = '') -> pyedb.grpc.database.primitive.polygon.Polygon

   
   Create RF trace taper.
   (y)
    ↑
    |              <─      End Width      ─>
    |              ─────── End Point ───────
    |             /           |                      |            /            |                       |           /             |                        |          ────────── Start Point ─────────
    |          <─         Start Width        ─>
    +──────────────────────────────────────→ (x)
















   ..
       !! processed by numpydoc !!

.. py:method:: open_solder_mask(open_components: bool = True, component_filter: list[str] | None = None, components_opening_offset: float | str = 0.0, open_voids: bool = True, voids_opening_offset: float | str = 0.0, open_traces: bool = True, traces_offset: float | str = 0.0, open_traces_net_filter: list[str] | None = None, solder_mask_layer_name: str = 'Solder', solder_mask_thickness: float | str = '30um', solder_mask_material: str = '', reference_signal_layer: str = '', open_top: bool = True) -> bool

   
   Create solder mask openings for components, voids, and traces.

   This method creates a solder mask dielectric layer with openings (negative geometries) for:

   - Component pads and bodies
   - Polygon voids (cutouts) in power/ground planes
   - PCB traces (transmission lines)

   The solder mask is created as a negative layer (inverted copper representation) in EDB,
   and openings are implemented as rectangular or polygonal shapes placed on this layer.
   A default solder mask material (εᵣ = 4) is created automatically if no material is specified.

   :Parameters:

       **open_components** : :ref:`bool <python:bltin-boolean-values>`, :obj:`optional`
           Enable creation of solder mask openings for component pads and bodies.
           If ``True`` and ``component_filter`` is ``None``, openings are created for all
           components on the reference signal layer. The default is ``True``.

       **component_filter** : :class:`python:list`\[:class:`python:str`], :obj:`optional`
           Reference designators (RefDes) of specific components to open (e.g., ``["C1", "R2"]``).
           If specified, only these components receive solder mask openings.
           If ``None``, all components on the reference layer are opened. The default is ``None``.

       **components_opening_offset** : :class:`python:float` or :class:`python:str`, :obj:`optional`
           Offset distance (in layout units or string with units) to expand component
           opening rectangles beyond the component bounding box. Use positive values to
           expand the opening, negative values to shrink it. The default is ``0.0``.
           Example: ``"0.1mm"`` or ``0.0001`` (in default unit).

       **open_voids** : :ref:`bool <python:bltin-boolean-values>`, :obj:`optional`
           Enable creation of solder mask openings for polygon voids (cutouts in planes).
           When enabled, iterates all polygons on the reference layer and extracts nested
           voids to create corresponding mask openings. The default is ``True``.

       **voids_opening_offset** : :class:`python:float` or :class:`python:str`, :obj:`optional`
           Scaling factor for void opening polygons. Positive values expand the void,
           negative values shrink it (relative scaling, not absolute offset). The default is ``0.0``.

       **open_traces** : :ref:`bool <python:bltin-boolean-values>`, :obj:`optional`
           Enable creation of solder mask openings for traces (paths) on the reference layer.
           When enabled, all path primitives are converted to polygonal mask openings. The default is ``True``.

       **traces_offset** : :class:`python:float` or :class:`python:str`, :obj:`optional`
           Scaling factor for trace opening polygons. The default is ``0.0``.

       **open_traces_net_filter** : :class:`python:list`\[:class:`python:str`], :obj:`optional`
           Net name filter to select only specific traces for mask openings (e.g., ``["GND", "SIG1"]``).
           If ``None``, all traces on the reference layer are opened. The default is ``None``.

       **solder_mask_layer_name** : :class:`python:str`, :obj:`optional`
           Name of the solder mask layer to create or reuse. If a layer with this name
           already exists in the stackup, it is reused; otherwise, a new layer is created.
           The default is ``"Solder"``.

       **solder_mask_thickness** : :class:`python:float` or :class:`python:str`, :obj:`optional`
           Thickness of the solder mask layer (in layout units or string with units).
           The default is ``"30um"``.

       **solder_mask_material** : :class:`python:str`, :obj:`optional`
           Name of the dielectric material for the solder mask layer. If the material
           does not exist in the database, a default solder mask material with εᵣ = 4
           is created and a warning is logged. The default is ``""`` (empty string triggers
           default creation).

       **reference_signal_layer** : :class:`python:str`, :obj:`optional`
           Name of the signal layer to reference for component placement and primitive
           filtering. If not specified, the topmost signal layer is used when ``open_top=True``,
           or the bottommost signal layer when ``open_top=False``. The default is ``""``.

       **open_top** : :ref:`bool <python:bltin-boolean-values>`, :obj:`optional`
           If ``True``, the solder mask layer is placed on top of the board and references
           the topmost signal layer. If ``False``, the mask is placed on the bottom and
           references the bottommost signal layer. The default is ``True``.



   :Returns:

       :ref:`bool <python:bltin-boolean-values>`
           ``True`` if the solder mask layer and all openings were created successfully.
           Raises ``ValueError`` if ``component_filter`` specifies RefDes values that do
           not exist in the design.




   :Raises:

       :obj:`ValueError`
           If any reference designator in ``component_filter`` is not found in the design.



   .. seealso::

       
       :meth:`stackup.add_layer`
           Add a dielectric layer to the stackup
       :meth:`create_rectangle`
           Create a rectangular primitive
       :meth:`create_polygon`
           Create a polygonal primitive
       
       
   .. rubric:: Notes

   - Solder mask layers are created as negative layers in EDB (inverted copper model).
   - All opening geometries inherit the solder mask layer name and are assigned
     to the default net (empty net name ``""``).
   - Component openings are rectangular bounding-box-based; for non-rectangular pads,
     consider using padstack opening geometries instead.
   - Void and trace openings are polygon-based and inherit the exact geometry of the
     original plane cutout or trace path.
   - Offset/scaling parameters use EDB unit system (typically millimeters).


   .. rubric:: Examples

   Create a standard solder mask with all openings on the top side:

   >>> edb = Edb("design.aedb")
   >>> edb.modeler.open_solder_mask()

   Create openings only for specific components with a 0.1 mm margin:

   >>> edb.modeler.open_solder_mask(
   ...     component_filter=["U1", "U2"],
   ...     components_opening_offset="0.1mm",
   ...     open_voids=False,
   ...     open_traces=False,
   ... )

   Create a bottom-side solder mask with custom material and thickness:

   >>> edb.modeler.open_solder_mask(
   ...     solder_mask_layer_name="BottomSolder",
   ...     solder_mask_material="CustomMask",
   ...     solder_mask_thickness="50um",
   ...     open_top=False,
   ... )

   ..
       !! processed by numpydoc !!




